--- a/index.html
+++ b/index.html
@@ -8,22 +8,23 @@
 <body>
 
 <!-- NAVIGATION -->
+ <!-- Add in quill logo with hyperlink later -->
     <ul>
-    <li>Login</li>
-    <li>Register</li>
+    <li><a href="login.html">Login</a></li>
+    <li><a href="register.html">Register</a></li>
     </ul>
 
 <!-- HERO SECTION -->
-    <h1>Mindful living for the digital world</h1>
+    <h1>Mindful living for the <br> digital world</h1>
     <p>The ultimate bullet journal app to document, reflect, and embrace your personal journe</p>
 
     <ul>
-        <li>Get Started </li>
-        <li>Learn More</li>
+        <li><a href="register.html">Get Started </a></li>
+        <li><a href="#features">Learn More</a></li>
     </ul>
 
 <!-- FEATURES SECTION-->
-    <h2>Finally,a simple and easy to use journal app</h2>
+    <h2 id="features">Finally,a simple and easy to use journal app</h2>
 
     <h3>Write all your journals in a few clicks</h3>
     <p>Unlock the simplicity of online journaling - say goodbye to the hassle of pen and paper and hello to effortless journaling with just a few clicks.</p>
@@ -36,21 +37,24 @@
 
 <!--CTA SECTION  -->
     <h2>Get Started Now</h2>
+    <a href="register.html">Get Started </a>
 
 <!-- FOOTER -->
 
+<!-- Add in quill logo and hyperlink later -->
 <!-- Add in social media icons later -->
     <ul>
-        <li>Instagram</li>
-        <li>Tiktok</li>
-        <li>Facebook</li>
-        <li>LinkedIn</li>
-        <li>YouTube</li>
+        <li><a href="https://www.instagram.com/">Instagram</a></li>
+        <li><a href="https://www.facebook.com/">Facebook</a></li>
+        <li><a href="https://www.tiktok.com/"></a>Tiktok</li>
+        <li><a href="https://www.linkedin.com/">LinkedIn</a></li>
+        <li><a href="https://www.youtube.com/">YouTube</a></li>
     </ul>
+
     <ul>
-        <li>Home</li>
-        <li>Login</li>
-        <li>Register</li>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="login.html">Login</a></li>
+        <li><a href="register.html">Register</a></li>
     </ul>
 
     <p>Made with ♥︎ in London</p>   
