--- a/index.html
+++ b/index.html
@@ -28,13 +28,16 @@
 
     <h3>Write all your journals in a few clicks</h3>
     <p>Unlock the simplicity of online journaling - say goodbye to the hassle of pen and paper and hello to effortless journaling with just a few clicks.</p>
+    <img src="assets/features-1.png" alt="Simple Online journaling" width="300px">
 
     <h3>Beautifully displayed and neatly organised</h3>
     <p>Not just words on a screen - our journals are beautifully displayed and neatly organised.</p>
+    <img src="assets/features-2.png" alt="Beautifully displayed Journals"  width="300px">
     
     <h3>Create and reflect from anywhere in the world</h3>
     <p>Whether you're at home or exploring the far corners of the world, create and reflect on your experiences, thoughts, and emotions from anywhere on the globe.</p> 
-
+    <img src="assets/features-3.png" alt="Create Journals Anywhere"  width="300px">
+ 
 <!--CTA SECTION  -->
     <h2>Get Started Now</h2>
     <a href="register.html">Get Started </a>
