added svg files

--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
 <body>
 
 <!-- NAVIGATION -->
- <!-- Add in quill logo with hyperlink later -->
+    <a href="index.html"><img src="assets/quill.svg" alt="quill logo" width="100px"></a>
     <ul>
     <li><a href="login.html">Login</a></li>
     <li><a href="register.html">Register</a></li>
     </ul>
 
 <!-- HERO SECTION -->
-    <h1>Mindful living for the <br> digital world</h1>
+    <h1>Mindful living for the <br> digital world📱</h1>
     <p>The ultimate bullet journal app to document, reflect, and embrace your personal journe</p>
 
     <ul>
@@ -44,18 +44,19 @@
 
 <!-- FOOTER -->
 
-<!-- Add in quill logo and hyperlink later -->
+    
+<a href="index.html"><img src="assets/quill.svg" alt="quill logo" width="100px"></a>
 <!-- Add in social media icons later -->
     <ul>
-        <li><a href="https://www.instagram.com/">Instagram</a></li>
-        <li><a href="https://www.facebook.com/">Facebook</a></li>
-        <li><a href="https://www.tiktok.com/"></a>Tiktok</li>
-        <li><a href="https://www.linkedin.com/">LinkedIn</a></li>
-        <li><a href="https://www.youtube.com/">YouTube</a></li>
+        <li><a href="https://www.instagram.com/"><img src="assets/instagram.svg" alt="Instagram logo" width="20px"></a></li>
+        <li><a href="https://www.facebook.com/"><img src="assets/facebook.svg" alt="Facebook logo" width="20px"></a></li>
+        <li><a href="https://www.tiktok.com/"></a><img src="assets/tiktok.svg" alt="Tiktok logo" width="20px"></li>
+        <li><a href="https://www.linkedin.com/"><img src="assets/linkedin.svg" alt="LinkedIn logo" width="20px"></a></li>
+        <li><a href="https://www.youtube.com/"><img src="assets/youtube.svg" alt="YouTube logo" width="20px"></a></li>
     </ul>
 
     <ul>
-        <li><a href="index.html">Home</a></li>
+        <li><a href="index.html">Home</a></li> 
         <li><a href="login.html">Login</a></li>
         <li><a href="register.html">Register</a></li>
     </ul>
