made some changes

--- a/index.html
+++ b/index.html
@@ -8,11 +8,14 @@
 <body>
 
 <!-- NAVIGATION -->
+<div>
     <a href="index.html"><img src="assets/quill.svg" alt="quill logo" width="100px"></a>
     <ul>
-    <li><a href="login.html">Login</a></li>
-    <li><a href="register.html">Register</a></li>
+       <li><a href="login.html">Login</a></li>
+       <li><a href="register.html">Register</a></li>
     </ul>
+</div>
+    
 
 <!-- HERO SECTION -->
     <h1>Mindful living for the <br> digital world📱</h1>
